--- a/styles/styles.css
+++ b/styles/styles.css
@@ -36,18 +36,12 @@ section {
   padding: 1rem;
 }
 
-#nav-name-long,
-#nav-name-short,
-#nav-name-shortest {
+#nav-name-long {
   color: #ffffff !important;
   font-family: "Lato", sans-serif;
   font-size: 2.8rem;
   font-weight: 700;
   white-space: nowrap;
-}
-
-#nav-name-short {
-  padding-left: 1rem !important;
 }
 
 #nav-message {
@@ -78,6 +72,7 @@ section {
   text-align: right;
   background-color: rgba(0, 0, 0, 0.6274509804);
   padding: 1rem;
+  border-radius: 0;
 }
 
 .navbar-toggler:focus,
@@ -112,19 +107,16 @@ section {
 }
 
 .nav-top {
-  background-color: rgba(0, 0, 0, 0.6274509804) !important;
+  background-color: transparent !important;
   position: absolute;
   left: 0 !important;
+  padding: 0 !important;
   width: 100%;
   height: 5.3rem;
-  justify-content: center !important;
-  padding: 0 !important;
-}
-.nav-top * {
-  border: 1px solid green;
 }
 .nav-top .nav-container {
-  border: 1px solid white;
+  width: inherit;
+  height: inherit;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -132,13 +124,17 @@ section {
 .nav-top #nav-message {
   display: none;
 }
-.nav-top #icons,
-.nav-top #nav-name-long,
-.nav-top #nav-name-short {
-  display: none;
+.nav-top #nav-menu {
+  height: inherit;
+  width: inherit;
+  width: 100%;
 }
-.nav-top #nav-name-short {
-  font-size: 2.5rem;
+.nav-top .navbar-toggler {
+  height: inherit;
+}
+.nav-top #icons,
+.nav-top #nav-name-long {
+  display: none;
 }
 
 .nav-center {
@@ -147,13 +143,11 @@ section {
   flex-direction: column;
   align-items: flex-start;
 }
-.nav-center .contact,
-.nav-center #nav-name-short,
-.nav-center #nav-name-shortest {
+.nav-center .contact {
   display: none;
 }
 
-@media (max-width: 991px) {
+@media (max-width: 991.98px) {
   .nav-center {
     align-items: center !important;
     text-align: center;
@@ -179,9 +173,7 @@ section {
     background-color: rgba(0, 0, 0, 0.6274509804);
   }
   .nav-center .navbar-toggler {
-    background-color: rgba(0, 0, 0, 0.6274509804);
     height: 5.3rem;
-    border-radius: 0;
   }
   .nav-center .nav-link {
     margin-left: 2rem !important;
@@ -218,64 +210,52 @@ section {
   .nav-top .nav-container {
     justify-content: flex-end !important;
   }
-  .nav-top .nav-container #nav-name-shortest {
-    display: none;
-  }
   .nav-top .nav-container #nav-menu {
     align-self: flex-end;
   }
 }
+@media (max-width: 1199.98px) {
+  .nav-top .nav-link {
+    margin-left: 2rem !important;
+  }
+}
+
 @media (max-width: 374px) {
-  .nav-top .nav-container,
-.section-container {
+  .section-container {
     width: 100%;
   }
 }
 @media (min-width: 375px) {
-  .nav-top .nav-container,
-.section-container {
+  .section-container {
     width: 375px;
   }
 }
 @media (min-width: 576px) {
-  .nav-top .nav-container,
-.section-container {
+  .section-container {
     border-color: purple;
     width: 540px;
   }
-  .nav-top .nav-container #nav-name-shortest,
-.section-container #nav-name-shortest {
-    display: none;
-  }
-  .nav-top .nav-container #nav-name-short,
-.section-container #nav-name-short {
-    display: inline;
-  }
 }
 @media (min-width: 768px) {
-  .nav-top .nav-container,
-.section-container {
+  .section-container {
     border-color: beige;
     width: 720px;
   }
 }
 @media (min-width: 992px) {
-  .nav-top .nav-container,
-.section-container {
+  .section-container {
     border-color: blue;
     width: 960px;
   }
 }
 @media (min-width: 1200px) {
-  .nav-top .nav-container,
-.section-container {
+  .section-container {
     border-color: green;
     width: 1140px;
   }
 }
 @media (min-width: 1440px) {
-  .nav-top .nav-container,
-.section-container {
+  .section-container {
     border-color: red;
     width: 1380px;
   }
